fix: calendar header align

--- a/src/plugins/calendar.scss
+++ b/src/plugins/calendar.scss
@@ -65,6 +65,11 @@ body.calendar-swap-year-month #calendar-container .nav {
     padding: 0;
     margin-bottom: var(--size-4-3);
     padding-left: var(--size-4-1);
+    justify-content: space-around;
+
+    .right-nav {
+      margin-left: unset;
+    }
   }
 
   .day {
