--- a/theme.css
+++ b/theme.css
@@ -3946,6 +3946,10 @@ body.calendar-swap-year-month #calendar-container .nav .title .month {
   padding: 0;
   margin-bottom: var(--size-4-3);
   padding-left: var(--size-4-1);
+  justify-content: space-around;
+}
+#calendar-container .nav .right-nav {
+  margin-left: unset;
 }
 #calendar-container .day {
   border: 1px solid transparent;
